src/test/ui/borrowck/issue-31287-drop-in-guard.stderr
error[E0382]: use of moved value: `a`
  --> $DIR/issue-31287-drop-in-guard.rs:5:9
   |
LL |     let a = Some("...".to_owned());
   |         - move occurs because `a` has type `Option<String>`, which does not implement the `Copy` trait
LL |     let b = match a {
LL |         Some(_) if { drop(a); false } => None,
   |                           - value moved here
LL |         x => x,
   |         ^ value used here after move

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
